--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="./assets/css/filereset.css">
     <title>website</title>
 </head>
-
 <body>
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
@@ -27,12 +26,18 @@
     </div>
     <div class="hero"></div>
     <div class="content">
-        <div class="search-engine-optimization">
+   
+   
+   
+   
+  <!-- clicking gives a follow up for the services of the website  -->
+
+    <div  id= "search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
-            </p>
+            </p> 
         </div>
         <div id="online-reputation-management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
@@ -80,4 +85,4 @@
     </div>
 </body>
 
-</html>
+</html> 
